[project]

authors = [{name = "Jeffrey Larson"}, {name = "Stephen Hudson"}, 
            {name = "Stefan M. Wild"}, {name = "David Bindel"}, 
            {name = "John-Luke Navarro"}]

dependencies = []
description = "A Python toolkit for coordinating asynchronous and dynamic ensembles of calculations."
name = "libensemble"
requires-python = ">= 3.9"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.rst"

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Operating System :: MacOS",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules", 
]

[project.urls]
Documentation = "https://libensemble.readthedocs.io/en/main/"
Repository = "https://github.com/Libensemble/libensemble"
Issues = "https://github.com/Libensemble/libensemble/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
libensemble = { path = ".", editable = true }

[tool.pixi.environments]
default = []
dev = ["dev"]

[tool.pixi.feature.dev.dependencies]
flake8 = ">=7.1.1,<8"
coverage = ">=7.6.4,<8"
pytest = ">=8.3.3,<9"
pytest-cov = ">=5.0.0,<6"
pytest-timeout = ">=2.3.1,<3"
mock = ">=5.1.0,<6"
python-dateutil = ">=2.9.0,<3"
anyio = ">=4.6.2.post1,<5"
matplotlib = ">=3.9.2,<4"
mpmath = ">=1.3.0,<2"
rich = ">=13.9.3,<14"
sphinx = ">=8.1.3,<9"
sphinxcontrib-bibtex = ">=2.6.3,<3"
sphinxcontrib-spelling = ">=4.3.0,<5"
sphinx-design = ">=0.6.1,<0.7"
numpy = ">=2.1.2,<3"
sphinx_rtd_theme = ">=3.0.1,<4"
sphinx-copybutton = ">=0.5.2,<0.6"
pre-commit = ">=4.0.1,<5"

[tool.pixi.dependencies]
python = ">=3.13.0,<4"
pip = ">=24.3.1,<25"
setuptools = ">=75.1.0,<76"
pydantic = ">=2.9.2,<3"
